tests/src/frontend/syntax/invalid/visibility_body.sk
class X private { fun foo(): void { void } }
